Added pytest and first unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,8 @@ pdf = [
 [project.scripts]
 Escarabajo = "Escarabajo.cli:main"
 escarabajo = "Escarabajo.cli:main"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+]
