Fixed MCP issue. Now works with some issues (recursion)

--- a/.Escarabajo/config.yaml
+++ b/.Escarabajo/config.yaml
@@ -6,11 +6,13 @@ exclude_globs:
 - node_modules/**
 - '**/~$*'
 - '**/*.tmp'
-expose_content: false
+expose_content: true
 globs:
 - '**/*.docx'
 - '**/*.pptx'
 - '**/*.pdf'
+- '**/*.py'
+- '**/*.md'
 kb_dir: .Escarabajo/kb
 ocr: false
 pdf:
