--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "pyyaml>=6",
     "pypdf2>=3",
+    "mcp>=1.0.0",
+    "fastmcp>=0.2.0",
 ]
 
 [project.optional-dependencies]
